--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <junit.version>5.10.2</junit.version>
     </properties>
 
+
     <dependencies>
         <!-- JPA API (team dùng 3.1.0; vẫn chạy với Hibernate 7) -->
         <dependency>
@@ -25,12 +26,20 @@
             <version>3.2.0</version>
         </dependency>
 
+
         <!-- Hibernate 7 -->
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>7.1.3.Final</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.eclipse</groupId>
+            <artifactId>yasson</artifactId>
+            <version>3.0.3</version>
+        </dependency>
+
 
         <!-- Servlet API (Tomcat 10) -->
         <dependency>
