--- a/pom.xml
+++ b/pom.xml
@@ -17,31 +17,35 @@
         <junit.version>5.10.2</junit.version>
     </properties>
 
-
     <dependencies>
-        <!-- JPA API (team dùng 3.1.0; vẫn chạy với Hibernate 7) -->
+        <!-- ===== JPA & Hibernate ===== -->
         <dependency>
             <groupId>jakarta.persistence</groupId>
             <artifactId>jakarta.persistence-api</artifactId>
             <version>3.2.0</version>
         </dependency>
 
-
-        <!-- Hibernate 7 -->
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>7.1.3.Final</version>
         </dependency>
 
+        <!-- JSON (Gson for Controllers) -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+
+        <!-- JSON-B (Optional for JPA converters) -->
         <dependency>
             <groupId>org.eclipse</groupId>
             <artifactId>yasson</artifactId>
             <version>3.0.3</version>
         </dependency>
 
-
-        <!-- Servlet API (Tomcat 10) -->
+        <!-- ===== Servlet & JSP ===== -->
         <dependency>
             <groupId>jakarta.servlet</groupId>
             <artifactId>jakarta.servlet-api</artifactId>
@@ -49,7 +53,6 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- JSP + JSTL -->
         <dependency>
             <groupId>jakarta.servlet.jsp.jstl</groupId>
             <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
@@ -61,21 +64,40 @@
             <version>3.0.1</version>
         </dependency>
 
-        <!-- PostgreSQL JDBC (Supabase) -->
+        <!-- ===== Database ===== -->
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>42.7.3</version>
         </dependency>
 
-        <!-- JSON (đang dùng trong controller) -->
+        <!-- ===== Utility libraries ===== -->
         <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.11.0</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.10.0</version>
         </dependency>
 
-        <!-- JUnit 5 -->
+        <!-- PDF -->
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.13.3</version>
+        </dependency>
+
+        <!-- Excel -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>5.2.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>5.2.5</version>
+        </dependency>
+
+        <!-- ===== JUnit 5 ===== -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
@@ -93,6 +115,7 @@
     <build>
         <finalName>BudgetBuddy</finalName>
         <plugins>
+            <!-- Compiler plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -103,6 +126,7 @@
                 </configuration>
             </plugin>
 
+            <!-- WAR plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
