--- a/pom.xml
+++ b/pom.xml
@@ -178,6 +178,14 @@
             <artifactId>quartz</artifactId>
             <version>2.3.2</version>
         </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/io.github.cdimascio/java-dotenv -->
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>java-dotenv</artifactId>
+            <version>5.2.2</version>
+        </dependency>
     </dependencies>
 
     <build>
