--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-POSTGRES_USER=budget_user
-POSTGRES_PASSWORD=web_database@pass
+﻿POSTGRES_USER=budget_user
+POSTGRES_PASSWORD=web_pass_final@123
 POSTGRES_DB=budget_db
 
 # DB_USER=budget_user
@@ -8,7 +8,7 @@ POSTGRES_DB=budget_db
 
 DB_URL=jdbc:postgresql://aws-1-ap-southeast-1.pooler.supabase.com:6543/postgres?sslmode=require
 DB_USER=postgres.bgbaeuehewyxditjnncg
-DB_PASS=web_database@pass
+DB_PASS=web_pass_final@123
 
 GOOGLE_CLIENT_ID=759297229937-2rm60mlklgvcr5vj0hcn5480nmlaghh9.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
